--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,11 @@
   <div class="wrapper">
     <div id="container">
       <div id="main" role="main">
+        <div class="download-bar">
+          <div class="inner">
+            <a class="code">_</a>
+          </div>
+        </div>
         <article class="markdown-body">
           {{ content }}
         </article>
